<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/remove"
        android:icon="@drawable/ic_close_black_24dp"
        android:orderInCategory="100"
        android:title="@string/remove"
        app:showAsAction="never"
        android:background="?android:attr/selectableItemBackground"
        android:clickable="true"
        android:focusable="true" />
    <item
        android:id="@+id/search"
        android:icon="@drawable/ic_search_black_24dp"
        android:orderInCategory="100"
        android:title="@string/search"
        app:showAsAction="never" />
    <item
        android:id="@+id/about"
        android:icon="@drawable/ic_info_outline_black_24dp"
        android:orderInCategory="100"
        android:title="@string/about"
        app:showAsAction="never" />
</menu>
